@startuml
skinparam minClassWidth 150
skinparam linetype ortho
skinparam monochrome true

class "Bean" as CBean <<@Collecting>>
class "Bean" as PBean <<@Present>>
interface Collector <<interface>>
class Controller <<@RestController>>
class Service <<@Scheduled>>
interface NativeLibrary
interface NativeLibraryFactory
class NativeLibraryImpl << (N, #FF7700) native>>

Service -up-|> Collector
CBean -right> Collector
Controller -left> Collector
Controller -right-|>PBean
Service -right> Presenter
PBean -o Presenter
PzbPresenter -left-|>PBean
Service -down-> Connector
Connector -left.-> NativeLibraryFactory : <<import>>
Connector -right.> NativeLibrary : <<import>>
NativeLibraryFactoryImpl -up-|> NativeLibraryFactory
NativeLibrary <|-down- NativeLibraryImpl
NativeLibraryFactoryImpl -right.->NativeLibraryImpl : <<instantiate>>

note "Main service managing\ninput and output controls\nvia Collector/Presenter" as NService
note "Delegates all output\nevents to PBeans" as NPresenter
note "Custom bean delegating\ninput events to Collector" as NCBean
note "Collects input events" as NCollector
note "Delegates input events from\nREST service calls to Collector\nand provides output events via\nREST service" as NController
note "Custom component\nreceiving output events." as NPBean
note "Sample component delegating\noutout events to FT232h board." as NPzbPresenter

NService .right. Service
NPresenter .left Presenter
NCBean .down. CBean
NCollector .down. Collector
NController .down. Controller
NPBean .down. PBean
NPzbPresenter .down. PzbPresenter

@enduml
